--- a/mypage.html
+++ b/mypage.html
@@ -323,7 +323,7 @@
       </div>
       <div class="p-4 space-y-4">
         <a href="./mypage.html" class="flex items-center gap-3">
-          <i class="ri-calendar-check-line text-xl text-gray-600"></i>
+          <i class="ri-calendar-check-line text-xl text-primary"></i>
           <span>예약 내역</span>
         </a>
         <a href="search.html" class="flex items-center gap-3">
@@ -345,6 +345,18 @@
         <a href="shop_list.html?type=hotel" class="flex items-center gap-3">
           <i class="ri-building-line text-xl text-gray-600"></i>
           <span>호텔</span>
+        </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
         </a>
         <a href="event.html" class="flex items-center gap-3">
           <i class="ri-gift-line text-xl text-gray-600"></i>
