--- a/recommend.html
+++ b/recommend.html
@@ -127,9 +127,9 @@
       </div>
     </div>
   </header>
-  <main class="relative pt-20 pb-[76px] overflow-hidden h-screen">
+  <main class="relative pt-[68px] pb-[65px] overflow-hidden h-screen">
     <div id="stepsWrapper" class="relative w-full h-full">
-      <div id="step1" class="step-transition step-visible px-4 h-full overflow-y-auto">
+      <div id="step1" class="step-transition step-visible px-4 h-full overflow-y-auto pt-4">
         <div class="text-center mb-8">
           <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="ri-group-line text-2xl text-primary"></i>
@@ -286,7 +286,7 @@
           </div>
         </div>
       </div>
-      <div id="step2" class="step-transition step-hidden px-4 h-full overflow-y-auto">
+      <div id="step2" class="step-transition step-hidden px-4 h-full overflow-y-auto pt-4">
         <div class="text-center mb-8">
           <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="ri-wallet-3-line text-2xl text-primary"></i>
@@ -327,7 +327,7 @@
           </button>
         </div>
       </div>
-      <div id="step3" class="step-transition step-hidden px-4 h-full overflow-y-auto">
+      <div id="step3" class="step-transition step-hidden px-4 h-full overflow-y-auto pt-4 ">
         <div class="text-center mb-8">
           <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="ri-map-pin-2-line text-2xl text-primary"></i>
@@ -494,7 +494,7 @@
           </button>
         </div>
       </div>
-      <div id="step4" class="step-transition step-hidden px-4 h-full overflow-y-auto">
+      <div id="step4" class="step-transition step-hidden px-4 h-full overflow-y-auto pt-4">
         <div class="text-center mb-8">
           <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="ri-tent-line text-2xl text-primary"></i>
@@ -561,7 +561,7 @@
           </button>
         </div>
       </div>
-      <div id="step5" class="step-transition step-hidden px-4 h-full overflow-y-auto">
+      <div id="step5" class="step-transition step-hidden px-4 h-full overflow-y-auto pt-4">
         <div class="text-center mb-8">
           <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="ri-heart-3-line text-2xl text-primary"></i>
@@ -640,7 +640,7 @@
           </div>
         </div>
       </div>
-      <div id="resultStep" class="step-transition step-hidden px-4 h-full overflow-y-auto">
+      <div id="resultStep" class="step-transition step-hidden px-4 h-full overflow-y-auto py-4 pb-8">
         <div class="text-center mb-8">
           <div class="w-16 h-16 bg-primary rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="ri-brain-line text-2xl text-white"></i>
@@ -674,7 +674,7 @@
         </div>
         <div class="space-y-4">
           <a href="#" class="result-card bg-white rounded-xl overflow-hidden shadow-sm block cursor-pointer"
-            data-title="가평 프리미엄 글램핑" data-region="경기도 가평군" data-price="180000" data-rating="4.8"
+            data-title="가평 프리미엄 글램핑" data-region="경기도 가평군 청평면 대성리" data-price="180000" data-rating="4.8"
             data-description="자연 속 럭셔리 글램핑 체험" data-distance="차량 1시간" data-facilities="수영장,바베큐장,와이파이"
             data-image="https://readdy.ai/api/search-image?query=Luxury%20glamping%20tent%20with%20panoramic%20windows%20surrounded%20by%20forest%2C%20premium%20camping%20experience%2C%20cozy%20interior%20lighting%2C%20evening%20atmosphere%2C%20professional%20photography&width=800&height=400&seq=51&orientation=landscape"
             data-badge="AI 추천">
@@ -693,14 +693,14 @@
               <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2 text-sm text-gray-500">
                   <i class="ri-map-pin-line"></i>
-                  <span>경기도 가평군</span>
+                  <span>경기도 가평군 청평면 대성리</span>
                 </div>
                 <span class="text-primary font-medium">180,000원~</span>
               </div>
             </div>
           </a>
           <a href="#" class="result-card bg-white rounded-xl overflow-hidden shadow-sm block cursor-pointer"
-            data-title="양평 힐링 글램핑" data-region="경기도 양평군" data-price="150000" data-rating="4.6"
+            data-title="양평 힐링 글램핑" data-region="경기도 양평군 양서면 용담리" data-price="150000" data-rating="4.6"
             data-description="계곡 옆 힐링 글램핑" data-distance="차량 50분" data-facilities="바베큐장,와이파이,주차장"
             data-image="https://readdy.ai/api/search-image?query=Modern%20glamping%20dome%20with%20mountain%20view%2C%20luxury%20outdoor%20accommodation%2C%20comfortable%20interior%20setup%2C%20sunset%20lighting%2C%20high-quality%20photography&width=800&height=400&seq=52&orientation=landscape"
             data-badge="인기">
@@ -719,14 +719,14 @@
               <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2 text-sm text-gray-500">
                   <i class="ri-map-pin-line"></i>
-                  <span>경기도 양평군</span>
+                  <span>경기도 양평군 양서면 용담리</span>
                 </div>
                 <span class="text-primary font-medium">150,000원~</span>
               </div>
             </div>
           </a>
           <a href="#" class="result-card bg-white rounded-xl overflow-hidden shadow-sm block cursor-pointer"
-            data-title="포천 숲속 글램핑" data-region="경기도 포천시" data-price="160000" data-rating="4.7"
+            data-title="포천 숲속 글램핑" data-region="경기도 포천시 내촌면 금현리" data-price="160000" data-rating="4.7"
             data-description="숲속 프라이빗 글램핑" data-distance="차량 1시간 10분" data-facilities="바베큐장,와이파이"
             data-image="https://readdy.ai/api/search-image?query=Cozy%20glamping%20tent%20with%20private%20deck%2C%20forest%20setting%2C%20romantic%20atmosphere%2C%20warm%20interior%20lighting%2C%20couple-friendly%20accommodation&width=800&height=400&seq=53&orientation=landscape"
             data-badge="">
@@ -745,22 +745,24 @@
               <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2 text-sm text-gray-500">
                   <i class="ri-map-pin-line"></i>
-                  <span>경기도 포천시</span>
+                  <span>경기도 포천시 내촌면 금현리</span>
                 </div>
                 <span class="text-primary font-medium">160,000원~</span>
               </div>
             </div>
           </a>
         </div>
-        <a href="#"
-          class="w-full bg-primary text-white py-4 !rounded-button font-medium mt-6 cursor-pointer block text-center"
-          onclick="goToResultList(); return false;">
-          더 많은 추천 보기
-        </a>
+
       </div>
   </main>
-  <div class="fixed bottom-0 left-0 right-0 bg-white border-t px-4 py-3">
-    <div class="flex items-center justify-between">
+
+  <div class="fixed bottom-0 left-0 right-0 bg-white border-t px-4 py-3 z-50">
+    <a href="#" id="moreLink"
+      class="bg-primary text-white py-4 !rounded-button font-medium cursor-pointer block text-center hover:bg-primary/90 transition-colors z-50"
+      style="display: none;" onclick="goToResultList();">
+      더 많은 추천 보기
+    </a>
+    <div class="flex items-center justify-between" id="stepNavigation">
       <div class="flex gap-2">
         <div class="w-2 h-2 rounded-full bg-primary" id="dot1"></div>
         <div class="w-2 h-2 rounded-full bg-gray-300" id="dot2"></div>
@@ -806,8 +808,6 @@
         }
       }
       function showStep(stepNumber, direction = 'next') {
-        console.log('showStep called with stepNumber:', stepNumber, 'direction:', direction);
-
         // 현재 활성 스텝 찾기
         let currentActiveStep = null;
         for (let i = 1; i <= totalSteps; i++) {
@@ -858,8 +858,8 @@
         }
 
         if (stepNumber === totalSteps + 1) {
-          console.log('AI 분석 스텝으로 이동');
-          document.querySelector('.fixed.bottom-0').style.display = 'none';
+          document.getElementById('stepNavigation').style.display = 'none';
+          document.getElementById('moreLink').style.display = 'block';
           document.getElementById('aiAnalysisStep').classList.remove('step-hidden');
           document.getElementById('aiAnalysisStep').classList.add('step-visible');
           setTimeout(() => {
@@ -884,6 +884,12 @@
           facilitiesDiv.className = 'bg-white/70 rounded-lg p-2 col-span-2';
           facilitiesDiv.innerHTML = `<span class="text-gray-600">선호시설:</span><span class="font-medium ml-1" id="resultFacilities">${facilitiesText}</span>`;
           document.querySelector('.grid.grid-cols-2.gap-3.text-sm').appendChild(facilitiesDiv);
+        }
+
+        // 결과 스텝에서 moreLink 표시
+        const moreLink = document.getElementById('moreLink');
+        if (moreLink) {
+          moreLink.style.display = 'block';
         }
       }
 
@@ -985,8 +991,6 @@
         });
       });
       nextBtn.addEventListener('click', function () {
-        console.log('nextBtn clicked, currentStep:', currentStep, 'totalSteps:', totalSteps);
-
         if (currentStep < totalSteps) {
           currentStep++;
           updateProgress();
@@ -996,7 +1000,6 @@
           }
         } else if (currentStep === totalSteps) {
           // 마지막 스텝에서 "추천 받기" 버튼 클릭 시
-          console.log('추천 받기 버튼 클릭됨');
 
           // 현재 활성 스텝을 왼쪽으로 슬라이드 아웃
           const currentActiveStep = document.getElementById('step' + currentStep);
@@ -1005,6 +1008,8 @@
 
           // 하단 버튼 숨기기
           document.querySelector('.fixed.bottom-0').style.display = 'none';
+          document.getElementById('stepNavigation').style.display = 'none';
+          document.getElementById('moreLink').style.display = 'none';
 
           // AI 분석 스텝을 오른쪽에서 슬라이드 인
           const aiStep = document.getElementById('aiAnalysisStep');
@@ -1022,6 +1027,9 @@
             resultStep.classList.remove('step-hidden');
             resultStep.classList.add('step-visible');
             showResults();
+            document.querySelector('.fixed.bottom-0').style.display = 'block';
+            document.getElementById('stepNavigation').style.display = 'none';
+            document.getElementById('moreLink').style.display = 'block';
           }, 3000);
         }
       });
@@ -1051,7 +1059,6 @@
 
         // 지도 드래그 중이면 화면 전환 방지
         if (window.isMapDragging) {
-          console.log('지도 드래그 중 - 화면 전환 방지');
           isDragging = false;
           return;
         }
@@ -1164,7 +1171,6 @@
         kakao.maps.event.addListener(map, 'zoom_start', () => window.isMapDragging = true);
         kakao.maps.event.addListener(map, 'zoom_changed', () => window.isMapDragging = false);
 
-        console.log('카카오 지도 초기화 완료');
       }
 
       if (typeof kakao !== 'undefined' && kakao.maps) {
