--- a/wishlist.html
+++ b/wishlist.html
@@ -77,8 +77,9 @@
   <header class="fixed top-0 left-0 right-0 z-50 bg-white">
     <div class="flex items-center justify-between px-4 py-3">
       <div class="h-8">
-        <img src="https://static.readdy.ai/image/8e132e14d40e39950729448e3ee1a5fe/02ba30866da6053b6048c04a7f5cc66d.png"
-          alt="DaeCamp" class="h-full">
+        <img
+          src="https://videos.openai.com/vg-assets/assets%2Ftask_01k19z5fmqfkts58jss9s2xgez%2F1753755192_img_0.webp?st=2025-07-29T00%3A42%3A58Z&se=2025-08-04T01%3A42%3A58Z&sks=b&skt=2025-07-29T00%3A42%3A58Z&ske=2025-08-04T01%3A42%3A58Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=9sPPeqjj27qmEN6pm1KUsYXfmh%2FqqgwTFedSOy2Tcks%3D&az=oaivgprodscus"
+          alt="DaeCamp" class="w-32 relative -left-9 -top-2.5">
       </div>
       <div class="flex items-center gap-2">
         <a href="./login.html" data-readdy="true">
@@ -129,7 +130,7 @@
             <h3 class="font-medium text-lg">프리미엄 글램핑 A</h3>
             <span class="text-primary font-bold">₩280,000~</span>
           </div>
-          <p class="text-sm text-gray-600 mb-2">강원도 홍천군</p>
+          <p class="text-sm text-gray-600 mb-2">강원도 홍천군 화촌면 용대리</p>
           <div class="flex items-center gap-2 mb-3">
             <div class="flex text-yellow-400">
               <i class="ri-star-fill text-sm"></i>
@@ -146,7 +147,7 @@
             <span class="px-2 py-1 bg-purple-50 text-purple-600 rounded text-xs">바베큐</span>
           </div>
           <div class="flex gap-2">
-            <a href="shop_detail.html?title=프리미엄 글램핑 A&region=강원도 홍천군&price=280000&id=premium-a&image=premium-a-img"
+            <a href="shop_detail.html?title=프리미엄 글램핑 A&region=강원도 홍천군 화촌면 용대리&price=280000&id=premium-a&image=premium-a-img"
               class="flex-1 bg-primary text-white py-2 rounded-lg text-center font-medium">
               상세보기
             </a>
@@ -173,7 +174,7 @@
             <h3 class="font-medium text-lg">프리미엄 펫 풀빌라</h3>
             <span class="text-primary font-bold">₩320,000~</span>
           </div>
-          <p class="text-sm text-gray-600 mb-2">강원도 홍천군</p>
+          <p class="text-sm text-gray-600 mb-2">강원도 홍천군 서면 마곡리</p>
           <div class="flex items-center gap-2 mb-3">
             <div class="flex text-yellow-400">
               <i class="ri-star-fill text-sm"></i>
@@ -190,7 +191,7 @@
             <span class="px-2 py-1 bg-purple-50 text-purple-600 rounded text-xs">넓은 정원</span>
           </div>
           <div class="flex gap-2">
-            <a href="shop_detail.html?title=프리미엄 펫 풀빌라&region=강원도 홍천군&price=320000&id=pet-villa&image=pet-villa-img"
+            <a href="shop_detail.html?title=프리미엄 펫 풀빌라&region=강원도 홍천군 서면 마곡리&price=320000&id=pet-villa&image=pet-villa-img"
               class="flex-1 bg-primary text-white py-2 rounded-lg text-center font-medium">
               상세보기
             </a>
@@ -305,6 +306,18 @@
         <a href="shop_list.html?type=hotel" class="flex items-center gap-3">
           <i class="ri-building-line text-xl text-gray-600"></i>
           <span>호텔</span>
+        </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
         </a>
         <a href="event.html" class="flex items-center gap-3">
           <i class="ri-gift-line text-xl text-gray-600"></i>
