--- a/customer_service.html
+++ b/customer_service.html
@@ -498,6 +498,18 @@
           <i class="ri-building-line text-xl text-gray-600"></i>
           <span>호텔</span>
         </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
+        </a>
         <a href="event.html" class="flex items-center gap-3">
           <i class="ri-gift-line text-xl text-gray-600"></i>
           <span>이벤트</span>
@@ -571,28 +583,26 @@
 
       // 토스트 팝업 생성
       const toast = document.createElement('div');
-      toast.className = 'toast-popup fixed top-20 left-1/2 transform -translate-x-1/2 bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
-      toast.textContent = message;
+      toast.className = 'toast-popup fixed top-20 left-0 right-0 mx-auto w-max bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
 
-      // 스타일 추가
-      const style = document.createElement('style');
-      style.textContent = `
-        .toast-popup {
-          animation: fadeIn 0.3s ease-out forwards;
-        }
-        @keyframes fadeIn {
-          from { opacity: 0; transform: translate(-50%, -20px); }
-          to { opacity: 1; transform: translate(-50%, 0); }
-        }
+      toast.innerHTML = `
+        <div class="flex items-center gap-2 whitespace-nowrap">
+          <i class="ri-information-line text-lg"></i>
+          <span class="text-sm">${message}</span>
+        </div>
       `;
-      document.head.appendChild(style);
 
       document.body.appendChild(toast);
 
       // 3초 후 자동 제거
       setTimeout(() => {
         if (toast.parentElement) {
-          toast.remove();
+          toast.classList.add('opacity-0', 'transition-opacity', 'duration-300');
+          setTimeout(() => {
+            if (toast.parentElement) {
+              toast.remove();
+            }
+          }, 300);
         }
       }, 3000);
     }
