--- a/event.html
+++ b/event.html
@@ -190,7 +190,7 @@
     <div class="px-4 mb-8">
       <div class="flex items-center justify-between mb-4">
         <h3 class="text-lg font-medium">진행중인 이벤트</h3>
-        <span class="text-sm text-gray-500">총 8개</span>
+        <span class="text-sm text-gray-500">총 4개</span>
       </div>
 
       <div class="space-y-4">
@@ -551,6 +551,18 @@
           <i class="ri-building-line text-xl text-gray-600"></i>
           <span>호텔</span>
         </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
+        </a>
         <a href="event.html" class="flex items-center gap-3">
           <i class="ri-gift-line text-xl text-primary"></i>
           <span>이벤트</span>
@@ -581,7 +593,6 @@
           this.classList.remove('bg-white', 'text-gray-600', 'border');
           this.classList.add('bg-primary', 'text-white');
 
-          console.log('카테고리 선택:', this.textContent);
         });
       });
 
@@ -624,7 +635,6 @@
       document.querySelectorAll('.event-card').forEach(card => {
         card.addEventListener('click', function () {
           const title = this.querySelector('h4').textContent;
-          console.log('이벤트 클릭:', title);
           // 여기에 이벤트 상세 페이지로 이동하는 로직 추가
         });
       });
@@ -658,28 +668,26 @@
 
         // 토스트 팝업 생성
         const toast = document.createElement('div');
-        toast.className = 'toast-popup fixed top-20 left-1/2 transform -translate-x-1/2 bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
-        toast.textContent = message;
+        toast.className = 'toast-popup fixed top-20 left-0 right-0 mx-auto w-max bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
 
-        // 스타일 추가
-        const style = document.createElement('style');
-        style.textContent = `
-          .toast-popup {
-            animation: fadeIn 0.3s ease-out forwards;
-          }
-          @keyframes fadeIn {
-            from { opacity: 0; transform: translate(-50%, -20px); }
-            to { opacity: 1; transform: translate(-50%, 0); }
-          }
+        toast.innerHTML = `
+          <div class="flex items-center gap-2 whitespace-nowrap">
+            <i class="ri-information-line text-lg"></i>
+            <span class="text-sm">${message}</span>
+          </div>
         `;
-        document.head.appendChild(style);
 
         document.body.appendChild(toast);
 
         // 3초 후 자동 제거
         setTimeout(() => {
           if (toast.parentElement) {
-            toast.remove();
+            toast.classList.add('opacity-0', 'transition-opacity', 'duration-300');
+            setTimeout(() => {
+              if (toast.parentElement) {
+                toast.remove();
+              }
+            }, 300);
           }
         }, 3000);
       }
@@ -687,7 +695,6 @@
       // 알림 신청
       document.querySelector('.bg-gradient-to-r button').addEventListener('click', function () {
         // 알림 신청 기능 비활성화
-        console.log('알림 신청 버튼 클릭됨');
       });
     });
   </script>
