--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <h2 class="text-2xl font-medium text-white mb-2">캠핑의 모든 것</h2>
           <p class="text-white/90 text-sm mb-4">자연 속에서 특별한 순간을 만나보세요</p>
           <div class="flex gap-3">
-            <a href="./shop_detail.html?title=숲속 글램핑 리조트&region=강원도 홍천군&price=130000&id=forest-glamping&rating=4.8&description=자연 속에서 특별한 순간을 만나보세요. 럭셔리 글램핑으로 힐링하는 완벽한 휴식&distance=45km&facilities=글램핑,데크,바베큐장,샤워실,주차장&badge=프리미엄 글램핑"
+            <a href="./shop_detail.html?title=숲속 글램핑 리조트&region=경기도 가평군 청평면 대성리&price=130000&id=forest-glamping&rating=4.8&description=자연 속에서 특별한 순간을 만나보세요. 럭셔리 글램핑으로 힐링하는 완벽한 휴식&distance=45km&facilities=글램핑,데크,바베큐장,샤워실,주차장&badge=프리미엄 글램핑"
               data-readdy="true"
               data-image="https://readdy.ai/api/search-image?query=Beautiful%20camping%20site%20in%20nature%20with%20tent%20and%20campfire%20at%20sunset%2C%20cinematic%20shot%2C%204k%20quality&width=800&height=600&seq=10&orientation=landscape"
               class="px-6 py-2 bg-primary text-white !rounded-button flex items-center gap-2">
@@ -267,7 +267,7 @@
           <h3 class="text-lg font-medium">프리미엄 글램핑</h3>
         </div>
         <div class="flex gap-3 overflow-x-auto pb-2">
-          <a href="shop_detail.html?title=프리미엄 글램핑 A&region=강원도 홍천군&price=280000&id=premium-a&img=premium-a-img"
+          <a href="shop_detail.html?title=프리미엄 글램핑 A&region=경기도 가평군 청평면 대성리&price=280000&id=premium-a&img=premium-a-img"
             data-readdy="true"
             data-image="https://readdy.ai/api/search-image?query=Luxury%20glamping%20tent%20interior%20with%20king%20size%20bed%2C%20warm%20lighting%2C%20premium%20camping%20experience%2C%20cozy%20atmosphere&width=560&height=300&seq=17&orientation=landscape"
             class="min-w-[280px] bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -282,7 +282,7 @@
               <p class="text-sm text-gray-600">₩280,000 부터</p>
             </div>
           </a>
-          <a href="shop_detail.html?title=글램핑 돔 B&region=강원도 홍천군&price=250000&id=dome-b&img=dome-b-img"
+          <a href="shop_detail.html?title=글램핑 돔 B&region=경기도 양평군 양서면 용담리&price=250000&id=dome-b&img=dome-b-img"
             data-readdy="true"
             data-image="https://readdy.ai/api/search-image?query=Modern%20glamping%20dome%20with%20panoramic%20windows%2C%20forest%20view%2C%20luxury%20camping%20setup&width=560&height=300&seq=18&orientation=landscape"
             class="min-w-[280px] bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -305,7 +305,7 @@
           <h3 class="text-lg font-medium">반려견 동반 풀빌라</h3>
         </div>
         <div class="flex gap-3 overflow-x-auto pb-2">
-          <a href="./shop_detail.html?title=프리미엄 펫 풀빌라&region=강원도 홍천군&price=320000&id=pet-villa&img=pet-villa-img"
+          <a href="./shop_detail.html?title=프리미엄 펫 풀빌라&region=경기도 포천시 영중면 영평리&price=320000&id=pet-villa&img=pet-villa-img"
             data-readdy="true"
             data-image="https://readdy.ai/api/search-image?query=Luxury%20pet-friendly%20villa%20with%20private%20pool%2C%20modern%20design%2C%20spacious%20outdoor%20area%2C%20perfect%20for%20dogs&width=560&height=300&seq=19&orientation=landscape"
             class="min-w-[280px] bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -320,7 +320,7 @@
               <p class="text-sm text-gray-600">₩320,000 부터</p>
             </div>
           </a>
-          <a href="./shop_detail.html?title=디럭스 펫 룸&region=강원도 홍천군&price=270000&id=pet-room&img=pet-room-img"
+          <a href="./shop_detail.html?title=디럭스 펫 룸&region=경기도 용인시 처인구 백암면 백암리&price=270000&id=pet-room&img=pet-room-img"
             data-readdy="true"
             data-image="https://readdy.ai/api/search-image?query=Pet-friendly%20luxury%20accommodation%20with%20garden%20view%2C%20dog%20amenities%2C%20modern%20interior&width=560&height=300&seq=20&orientation=landscape"
             class="min-w-[280px] bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -354,7 +354,7 @@
         </div>
         <div class="flex justify-between items-center mb-4">
           <h3 class="text-lg font-medium">실시간 리뷰</h3>
-          <a href="shop_detail.html?title=프리미엄 펫 풀빌라&region=강원도 홍천군&price=320000&id=pet-villa&img=pet-villa-img"
+          <a href="shop_detail.html?title=프리미엄 펫 풀빌라&region=경기도 포천시 영중면 영평리&price=320000&id=pet-villa&img=pet-villa-img"
             data-image="https://readdy.ai/api/search-image?query=Luxury%20pet-friendly%20villa%20with%20private%20pool%2C%20modern%20design%2C%20spacious%20outdoor%20area%2C%20perfect%20for%20dogs&width=560&height=300&seq=19&orientation=landscape"
             class="text-sm text-primary">전체보기</a>
         </div>
@@ -396,7 +396,7 @@
     <div class="mb-8 px-4">
       <h3 class="text-lg font-medium mb-4">추천 캠핑장</h3>
       <div class="space-y-4">
-        <a href="./shop_detail.html?title=서울 글램핑 파크&region=서울시 강동구&price=120000&id=seoul-glamping&img=seoul-glamping-img"
+        <a href="./shop_detail.html?title=서울 글램핑 파크&region=서울시 강동구 천호동&price=120000&id=seoul-glamping&img=seoul-glamping-img"
           data-readdy="true"
           data-image="https://readdy.ai/api/search-image?query=Luxurious%20camping%20site%20at%20night%20with%20warm%20lighting%2C%20comfortable%20tents%2C%20and%20natural%20surroundings%2C%20professional%20photography&width=800&height=400&seq=11&orientation=landscape"
           class="block bg-white rounded-xl overflow-hidden shadow-sm">
@@ -411,11 +411,11 @@
             <p class="text-sm text-gray-600 mb-2">도심 속 프리미엄 글램핑</p>
             <div class="flex items-center gap-2 text-sm text-gray-500">
               <i class="ri-map-pin-line"></i>
-              <span>서울시 강동구</span>
+              <span>서울시 강동구 천호동</span>
             </div>
           </div>
         </a>
-        <a href="./shop_detail.html?title=가평 숲속 캠핑장&region=경기도 가평군&price=80000&id=gapyeong-camping&img=gapyeong-camping-img"
+        <a href="./shop_detail.html?title=가평 숲속 캠핑장&region=경기도 가평군 청평면 대성리&price=80000&id=gapyeong-camping&img=gapyeong-camping-img"
           data-readdy="true"
           data-image="https://readdy.ai/api/search-image?query=Scenic%20mountain%20camping%20ground%20with%20modern%20facilities%2C%20tents%20surrounded%20by%20pine%20trees%2C%20morning%20atmosphere&width=800&height=400&seq=12&orientation=landscape"
           class="block bg-white rounded-xl overflow-hidden shadow-sm">
@@ -430,7 +430,7 @@
             <p class="text-sm text-gray-600 mb-2">자연 그대로의 캠핑</p>
             <div class="flex items-center gap-2 text-sm text-gray-500">
               <i class="ri-map-pin-line"></i>
-              <span>경기도 가평군</span>
+              <span>경기도 가평군 청평면 대성리</span>
             </div>
           </div>
         </a>
@@ -442,7 +442,7 @@
         <a href="shop_list.html?type=caravan" class="text-sm text-primary">전체보기</a>
       </div>
       <div class="flex gap-3 overflow-x-auto pb-2">
-        <a href="./shop_detail.html?title=프리미엄 카라반 A동&region=강원도 홍천군&price=180000&id=caravan-a&img=caravan-a-img"
+        <a href="./shop_detail.html?title=프리미엄 카라반 A동&region=경기도 가평군 청평면 대성리&price=180000&id=caravan-a&img=caravan-a-img"
           data-readdy="true"
           data-image="https://readdy.ai/api/search-image?query=Modern%20luxury%20caravan%20camping%2C%20stylish%20interior%20and%20exterior%20view%2C%20sunset%20lighting&width=560&height=300&seq=13&orientation=landscape"
           class="min-w-[280px] bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -454,7 +454,7 @@
             <p class="text-sm text-gray-600">최대 4인 / 취사가능</p>
           </div>
         </a>
-        <a href="./shop_detail.html?title=디럭스 카라반 B동&region=강원도 홍천군&price=150000&id=caravan-b&img=caravan-b-img"
+        <a href="./shop_detail.html?title=디럭스 카라반 B동&region=경기도 양평군 양서면 용담리&price=150000&id=caravan-b&img=caravan-b-img"
           data-readdy="true"
           data-image="https://readdy.ai/api/search-image?query=Cozy%20caravan%20interior%20with%20modern%20amenities%2C%20warm%20lighting%2C%20comfortable%20living%20space&width=560&height=300&seq=14&orientation=landscape"
           class="min-w-[280px] bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -471,7 +471,7 @@
     <div class="mb-8 px-4">
       <h3 class="text-lg font-medium mb-4">이번주 특가</h3>
       <div class="grid grid-cols-2 gap-3">
-        <a href="./shop_detail.html?title=양평 리버뷰&region=경기도 양평군&price=70000&id=yangpyeong-river&img=yangpyeong-river-img"
+        <a href="./shop_detail.html?title=양평 리버뷰&region=경기도 양평군 양서면 용담리&price=70000&id=yangpyeong-river&img=yangpyeong-river-img"
           data-readdy="true"
           data-image="https://readdy.ai/api/search-image?query=Peaceful%20lakeside%20camping%20spot%20with%20tent%20and%20campfire%2C%20evening%20atmosphere&width=400&height=300&seq=15&orientation=landscape"
           class="bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -483,10 +483,14 @@
           </div>
           <div class="p-3">
             <h4 class="text-sm font-medium mb-1">양평 리버뷰</h4>
-            <p class="text-xs text-gray-500">주중 특가</p>
+            <p class="text-xs text-gray-500 mb-1">주중 특가</p>
+            <div class="flex items-center gap-1 text-xs text-gray-400">
+              <i class="ri-map-pin-line"></i>
+              <span>경기도 양평군 양서면 용담리</span>
+            </div>
           </div>
         </a>
-        <a href="./shop_detail.html?title=포천 숲속캠핑&region=경기도 포천시&price=60000&id=pocheon-forest&img=pocheon-forest-img"
+        <a href="./shop_detail.html?title=포천 숲속캠핑&region=경기도 포천시 영중면 영평리&price=60000&id=pocheon-forest&img=pocheon-forest-img"
           data-readdy="true"
           data-image="https://readdy.ai/api/search-image?query=Forest%20camping%20ground%20with%20wooden%20deck%2C%20morning%20mist%20atmosphere&width=400&height=300&seq=16&orientation=landscape"
           class="bg-white rounded-xl overflow-hidden shadow-sm transition-transform hover:scale-[0.98] active:scale-95">
@@ -498,7 +502,11 @@
           </div>
           <div class="p-3">
             <h4 class="text-sm font-medium mb-1">포천 숲속캠핑</h4>
-            <p class="text-xs text-gray-500">주말 패키지</p>
+            <p class="text-xs text-gray-500 mb-1">주말 패키지</p>
+            <div class="flex items-center gap-1 text-xs text-gray-400">
+              <i class="ri-map-pin-line"></i>
+              <span>경기도 포천시 영중면 영평리</span>
+            </div>
           </div>
         </a>
       </div>
@@ -595,6 +603,18 @@
           <i class="ri-building-line text-xl text-gray-600"></i>
           <span>호텔</span>
         </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
+        </a>
         <a href="event.html" class="flex items-center gap-3">
           <i class="ri-gift-line text-xl text-gray-600"></i>
           <span>이벤트</span>
@@ -625,7 +645,7 @@
           await video.play();
           playPauseButton.innerHTML = '<i class="ri-pause-fill"></i>';
         } catch (error) {
-          console.log('자동재생이 차단되었습니다. 사용자가 재생 버튼을 클릭해야 합니다.');
+          // 자동재생이 차단되었습니다. 사용자가 재생 버튼을 클릭해야 합니다.
           playPauseButton.innerHTML = '<i class="ri-play-fill"></i>';
         } finally {
           isProcessing = false;
@@ -645,17 +665,13 @@
 
       // 재생/일시정지 버튼 이벤트
       playPauseButton.addEventListener('click', async function () {
-        console.log('재생/일시정지 버튼 클릭됨, 현재 비디오 상태:', video.paused ? '일시정지' : '재생중');
-
         if (isProcessing) {
-          console.log('이미 처리 중이므로 무시');
           return; // 이미 처리 중이면 무시
         }
         isProcessing = true;
 
         try {
           if (video.paused || video.ended) {
-            console.log('비디오 재생 시도');
             // 재생 시도
             const playPromise = video.play();
             if (playPromise !== undefined) {
@@ -663,17 +679,14 @@
             }
             // 재생 시작 시 즉시 버튼 업데이트
             playPauseButton.innerHTML = '<i class="ri-pause-fill"></i>';
-            console.log('버튼을 일시정지 아이콘으로 변경');
           } else {
-            console.log('비디오 일시정지');
             // 일시정지
             video.pause();
             // 일시정지 시 즉시 버튼 업데이트
             playPauseButton.innerHTML = '<i class="ri-play-fill"></i>';
-            console.log('버튼을 재생 아이콘으로 변경');
           }
         } catch (error) {
-          console.log('비디오 제어 중 일시적인 오류가 발생했습니다. 다시 시도해주세요.', error);
+          // 비디오 제어 중 일시적인 오류가 발생했습니다. 다시 시도해주세요.
           // 에러 발생 시 현재 상태에 맞게 버튼 업데이트
           if (video.paused) {
             playPauseButton.innerHTML = '<i class="ri-play-fill"></i>';
@@ -683,38 +696,36 @@
         } finally {
           setTimeout(() => {
             isProcessing = false;
-            console.log('처리 완료');
           }, 100); // 짧은 지연을 두어 연속 클릭 방지
         }
       });
 
       // 비디오 이벤트 리스너 추가 (상태 동기화)
       video.addEventListener('play', () => {
-        console.log('비디오 재생 이벤트 발생');
+        // 비디오 재생 이벤트 발생
         playPauseButton.innerHTML = '<i class="ri-pause-fill"></i>';
       });
 
       video.addEventListener('pause', () => {
-        console.log('비디오 일시정지 이벤트 발생');
+        // 비디오 일시정지 이벤트 발생
         playPauseButton.innerHTML = '<i class="ri-play-fill"></i>';
       });
 
       video.addEventListener('ended', () => {
-        console.log('비디오 종료 이벤트 발생');
+        // 비디오 종료 이벤트 발생
         playPauseButton.innerHTML = '<i class="ri-play-fill"></i>';
       });
 
       // 비디오 로딩 상태 확인
       video.addEventListener('loadstart', () => {
-        console.log('비디오 로딩 시작');
+        // 비디오 로딩 시작
       });
 
       video.addEventListener('canplay', () => {
-        console.log('비디오 재생 준비 완료');
+        // 비디오 재생 준비 완료
       });
 
       video.addEventListener('error', (e) => {
-        console.error('비디오 로드 오류:', e);
         playPauseButton.innerHTML = '<i class="ri-play-fill"></i>';
       });
     });
