--- a/login.html
+++ b/login.html
@@ -285,11 +285,36 @@
       closeFindPwModal();
     }
     function showToast(message) {
+      // 기존 토스트 제거
+      const existingToast = document.querySelector('.toast-popup');
+      if (existingToast) {
+        existingToast.remove();
+      }
+
+      // 토스트 팝업 생성
       const toast = document.createElement('div');
-      toast.className = 'fixed bottom-4 left-1/2 transform -translate-x-1/2 bg-gray-800 text-white px-6 py-3 rounded-lg shadow-lg z-50';
-      toast.textContent = message;
+      toast.className = 'toast-popup fixed top-20 left-0 right-0 mx-auto w-max bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
+
+      toast.innerHTML = `
+        <div class="flex items-center gap-2">
+          <i class="ri-information-line text-lg"></i>
+          <span class="text-sm">${message}</span>
+        </div>
+      `;
+
       document.body.appendChild(toast);
-      setTimeout(() => toast.remove(), 3000);
+
+      // 3초 후 자동 제거
+      setTimeout(() => {
+        if (toast.parentElement) {
+          toast.classList.add('opacity-0', 'transition-opacity', 'duration-300');
+          setTimeout(() => {
+            if (toast.parentElement) {
+              toast.remove();
+            }
+          }, 300);
+        }
+      }, 3000);
     }
     function loginWithKakao() {
       Kakao.Auth.login({
@@ -297,7 +322,6 @@
           Kakao.API.request({
             url: '/v2/user/me',
             success: function (res) {
-              console.log(res);
               const userProfile = {
                 id: res.id,
                 nickname: res.properties.nickname,
@@ -306,13 +330,11 @@
               handleLoginSuccess(userProfile);
             },
             fail: function (error) {
-              console.error('Failed to get user info:', error);
               handleLoginError('Failed to get user info');
             }
           });
         },
         fail: function (err) {
-          console.error('Failed to login:', err);
           handleLoginError('Failed to login with Kakao');
         }
       });
@@ -345,7 +367,6 @@
           setTimeout(() => {
             this.style.transform = '';
           }, 200);
-          console.log(`${platform} 로그인 시도`);
         });
       });
     });
