--- a/reservation.html
+++ b/reservation.html
@@ -89,15 +89,13 @@
 <body class="bg-white min-h-[762px] pb-24">
   <!-- 네비게이션 바 -->
   <nav class="fixed top-0 left-0 right-0 bg-white z-50 shadow-sm">
-    <div class="flex items-center px-4 h-16">
+    <div class="flex items-center px-4 h-16 relative">
       <a href="#" onclick="event.preventDefault(); history.back();" data-readdy="true"
         class="w-10 h-10 flex items-center justify-center cursor-pointer hover:bg-gray-50 rounded-full">
         <i class="ri-arrow-left-s-line text-xl"></i>
       </a>
-      <div class="flex-1 flex justify-center">
-        <h1 class="text-lg font-medium absolute left-1/2 transform -translate-x-1/2">예약하기</h1>
-      </div>
-      <div class="w-10 h-10"></div>
+      <h1 class="text-lg font-medium absolute left-1/2 transform -translate-x-1/2 top-1/2 -translate-y-1/2">예약하기</h1>
+      <div class="w-10 h-10 ml-auto"></div>
     </div>
   </nav>
   <main class="pt-20 px-4">
@@ -131,9 +129,11 @@
           <div id="check-in-date" class="font-medium">2025.07.08 (화)</div>
         </div>
         <div class="w-8 h-[2px] bg-gray-200"></div>
-        <div class="flex-1">
-          <span class="text-sm text-gray-500">체크아웃</span>
-          <div id="check-out-date" class="font-medium">2025.07.09 (수)</div>
+        <div class="flex-1 flex flex-col">
+          <div class="self-end">
+            <span class="text-sm text-gray-500">체크아웃</span>
+            <div id="check-out-date" class="font-medium">2025.07.09 (수)</div>
+          </div>
         </div>
       </div>
       <!-- 캘린더 -->
@@ -317,7 +317,7 @@
               class="text-red-500">*</span></label>
           <input type="tel" id="guest-phone"
             class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary"
-            placeholder="010-0000-0000">
+            placeholder="010-0000-0000" inputmode="numeric" pattern="[0-9]*">
         </div>
         <div>
           <label for="guest-email" class="block text-sm font-medium mb-1">이메일 <span
@@ -428,7 +428,7 @@
                 class="text-red-500">*</span></label>
             <input type="text" id="card-number"
               class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary"
-              placeholder="0000-0000-0000-0000">
+              placeholder="0000-0000-0000-0000" inputmode="numeric" pattern="[0-9]*">
           </div>
           <div class="grid grid-cols-2 gap-3">
             <div>
@@ -436,14 +436,14 @@
                   class="text-red-500">*</span></label>
               <input type="text" id="card-expiry"
                 class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary"
-                placeholder="MM/YY">
+                placeholder="MM/YY" inputmode="numeric" pattern="[0-9]*">
             </div>
             <div>
               <label for="card-cvc" class="block text-sm font-medium mb-1">CVC <span
                   class="text-red-500">*</span></label>
               <input type="text" id="card-cvc"
                 class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary"
-                placeholder="000">
+                placeholder="000" inputmode="numeric" pattern="[0-9]*">
             </div>
           </div>
         </div>
@@ -688,7 +688,6 @@
                 // 날짜 변경 시 가격 계산 업데이트
                 if (window.updateTotalPrice) {
                   window.updateTotalPrice();
-                  console.log('날짜 변경으로 인한 가격 업데이트 - 숙박일수:', nights);
                 }
               }
               renderCalendar();
@@ -713,8 +712,6 @@
         if (roomPriceLabel && roomPriceLabel.textContent.includes('객실 요금')) {
           roomPriceLabel.textContent = `객실 요금 (${nights}박)`;
         }
-
-        console.log('박 수 표시 업데이트:', nights + '박');
       }
 
       prevMonthBtn.addEventListener('click', () => { selectedStartDate.setMonth(selectedStartDate.getMonth() - 1); renderCalendar(); });
@@ -748,7 +745,6 @@
               // URL 파라미터가 있으면 그 가격 사용 (객실 타입 변경 시에도 유지)
               const roomPrice = Number(urlRoomPrice);
               document.getElementById('room-price').textContent = `₩${roomPrice.toLocaleString()}`;
-              console.log('URL 파라미터 가격 사용:', roomPrice);
             } else {
               // 없으면 기본 가격 사용
               let roomPrice = 130000; // 기본 가격 (디럭스)
@@ -758,7 +754,6 @@
                 roomPrice = 220000;
               }
               document.getElementById('room-price').textContent = `₩${roomPrice.toLocaleString()}`;
-              console.log('기본 가격 사용:', roomPrice);
             }
             updateTotalPrice();
           }
@@ -807,7 +802,6 @@
           };
 
           maxValue = maxCapacityMap[roomId] || 6;
-          console.log('객실 타입:', roomId, '최대 인원:', maxValue);
           const adultCount = parseInt(document.getElementById('adult-count').textContent);
           const childCount = parseInt(document.getElementById('child-count').textContent);
           const totalCount = adultCount + childCount;
@@ -822,7 +816,6 @@
       });
       function updateBreakfastPrice() {
         // 인원 수 변경 시 가격 업데이트 제거 (인원수는 가격에 영향을 미치지 않음)
-        console.log('인원 수 변경됨 (가격에 영향 없음)');
       }
       function showToast(message) {
         // 기존 토스트 제거
@@ -871,7 +864,6 @@
           }
 
           updateTotalPrice();
-          console.log('추가 옵션 토글:', this.getAttribute('data-option'), isActive ? '비활성화' : '활성화');
         });
       });
     });
@@ -1017,11 +1009,11 @@
       const guestEmailInput = document.getElementById('guest-email');
       const agreeTermsCheckbox = document.getElementById('agree-terms');
       const agreePrivacyCheckbox = document.getElementById('agree-privacy');
-      // 이름 한글/영어만 입력 가능
+      // 이름 한글만 입력 가능
       guestNameInput.addEventListener('input', function (e) {
         const input = e.target;
-        // 한글, 영어, 공백만 허용하는 정규식
-        input.value = input.value.replace(/[^가-힣a-zA-Z\s]/g, '');
+        // 한글, 공백만 허용하는 정규식
+        input.value = input.value.replace(/[^가-힣\s]/g, '');
       });
 
       // 전화번호 자동 하이픈 포맷팅
@@ -1152,24 +1144,35 @@
       });
       function showToast(message) {
         // 기존 토스트 제거
-        const existingToast = document.querySelector('.toast');
+        const existingToast = document.querySelector('.toast-popup');
         if (existingToast) {
           existingToast.remove();
         }
-        // 새 토스트 생성
+
+        // 토스트 팝업 생성
         const toast = document.createElement('div');
-        toast.className = 'toast fixed bottom-24 left-1/2 transform -translate-x-1/2 bg-gray-800 text-white px-4 py-2 rounded-lg text-sm';
-        toast.textContent = message;
+        toast.className = 'toast-popup fixed top-20 left-0 right-0 mx-auto w-max bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
+
+        toast.innerHTML = `
+          <div class="flex items-center gap-2 whitespace-nowrap">
+            <i class="ri-information-line text-lg"></i>
+            <span class="text-sm">${message}</span>
+          </div>
+        `;
+
         document.body.appendChild(toast);
-        // 3초 후 제거
+
+        // 3초 후 자동 제거
         setTimeout(() => {
-          toast.style.opacity = '0';
-          toast.style.transform = 'translate(-50%, 20px)';
-          toast.style.transition = 'opacity 0.3s, transform 0.3s';
-          setTimeout(() => {
-            toast.remove();
-          }, 300);
-        }, 2000);
+          if (toast.parentElement) {
+            toast.classList.add('opacity-0', 'transition-opacity', 'duration-300');
+            setTimeout(() => {
+              if (toast.parentElement) {
+                toast.remove();
+              }
+            }, 300);
+          }
+        }, 3000);
       }
     });
   </script>
@@ -1186,13 +1189,9 @@
         const currentRoomPrice = currentParams.get('roomPrice');
         let roomPrice = currentRoomPrice ? Number(currentRoomPrice) : 130000;
 
-        console.log('가격 계산 - URL 파라미터:', currentRoomPrice, '최종 가격:', roomPrice);
-
         // 숙박 일수 계산
         const nights = parseInt(document.getElementById('total-nights').textContent) || 1;
         const totalRoomPrice = roomPrice * nights;
-
-        console.log('가격 계산 - 숙박일수:', nights, '객실가격:', roomPrice, '총 객실가격:', totalRoomPrice);
 
         // 추가 옵션 가격 계산
         let optionsPrice = 0;
@@ -1217,8 +1216,6 @@
 
         // 총 가격 계산 및 표시
         const totalPrice = totalRoomPrice + optionsPrice;
-
-        console.log('최종 가격 계산 - 객실가격:', totalRoomPrice, '추가옵션:', optionsPrice, '총합:', totalPrice);
 
         // 가격 표시 업데이트
         const priceElements = {
@@ -1258,8 +1255,6 @@
       const roomImg = params.get('roomImg');
       const roomId = params.get('roomId');
 
-      console.log('쿼리스트링 데이터:', { roomName, roomPrice, roomCapacity, roomArea, roomImg, roomId });
-
       // 1) 상단 요약 이미지 · 제목 업데이트
       const summaryImg = document.querySelector('section.mb-6 img');
       const summaryTitle = document.querySelector('section.mb-6 h2');
@@ -1267,18 +1262,15 @@
       if (roomImg && summaryImg) {
         summaryImg.src = decodeURIComponent(roomImg);
         summaryImg.alt = roomName ? decodeURIComponent(roomName) : '숙소 이미지';
-        console.log('상단 이미지 업데이트:', decodeURIComponent(roomImg));
       }
 
       if (roomName && summaryTitle) {
         summaryTitle.textContent = decodeURIComponent(roomName);
-        console.log('상단 제목 업데이트:', decodeURIComponent(roomName));
       }
 
       // 2) 선택된 객실 정보 영역 업데이트 - 더 정확한 선택자 사용
       const selCard = document.querySelector('#selected-room-info');
       if (!selCard) {
-        console.warn('선택된 객실 정보 카드를 찾을 수 없습니다. (#selected-room-info)');
         return;
       }
 
@@ -1293,45 +1285,38 @@
       if (roomImg && imgEl) {
         imgEl.src = decodeURIComponent(roomImg);
         imgEl.alt = roomName ? decodeURIComponent(roomName) : '객실 이미지';
-        console.log('객실 이미지 업데이트:', decodeURIComponent(roomImg));
       }
 
       // 객실명 업데이트
       if (roomName && nameEl) {
         nameEl.textContent = decodeURIComponent(roomName);
-        console.log('객실명 업데이트:', decodeURIComponent(roomName));
       }
 
       // 면적 정보 업데이트
       if (roomArea && areaEl) {
         areaEl.textContent = `면적: ${decodeURIComponent(roomArea)}`;
-        console.log('면적 업데이트:', decodeURIComponent(roomArea));
       }
 
       // 수용 인원 업데이트
       if (roomCapacity && capacityEl) {
         capacityEl.textContent = decodeURIComponent(roomCapacity);
-        console.log('수용 인원 업데이트:', decodeURIComponent(roomCapacity));
       }
 
       // 가격 정보 업데이트
       if (roomPrice && priceEl) {
         const num = Number(roomPrice);
         priceEl.textContent = `₩${num.toLocaleString()} / 1박`;
-        console.log('객실 가격 업데이트:', num);
 
         // 1박 가격도 업데이트
         const nightlyPriceEl = document.getElementById('nightly-price');
         if (nightlyPriceEl) {
           nightlyPriceEl.textContent = `₩${num.toLocaleString()} / 1박`;
-          console.log('1박 가격 업데이트:', num);
         }
       }
 
       // 숨겨진 객실 타입 업데이트
       if (roomId && hidden) {
         hidden.value = roomId;
-        console.log('객실 타입 업데이트:', roomId);
       }
 
       // 3) 객실 특징 업데이트 (객실 타입에 따라)
@@ -1341,14 +1326,12 @@
         featuresContainer.innerHTML = features.map(feature =>
           `<span class="px-2 py-1 bg-gray-100 rounded-full text-xs text-gray-600">${feature}</span>`
         ).join('');
-        console.log('객실 특징 업데이트:', features);
       }
 
       // 4) 가격 계산 함수 호출 (객실 정보 업데이트 후)
       setTimeout(() => {
         if (window.updateTotalPrice) {
           window.updateTotalPrice();
-          console.log('가격 계산 함수 실행 완료');
         }
       }, 100);
     });
