--- a/shop_list.html
+++ b/shop_list.html
@@ -689,6 +689,18 @@
           <i class="ri-building-line text-xl text-gray-600"></i>
           <span>호텔</span>
         </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
+        </a>
         <a href="event.html" class="flex items-center gap-3">
           <i class="ri-gift-line text-xl text-gray-600"></i>
           <span>이벤트</span>
@@ -956,10 +968,6 @@
           if (facilities) params.append('facilities', facilities);
           if (badge) params.append('badge', badge);
 
-          console.log('계절별 캠핑 데이터 전달:', {
-            id, title, region, image, price, rating, description, distance, facilities, badge
-          });
-
           // shop_detail.html로 이동
           window.location.href = `shop_detail.html?${params.toString()}`;
         });
@@ -982,18 +990,8 @@
 
       // 정렬 함수
       function sortCampingList(sortType) {
-        console.log(`\n=== ${sortType === 'distance' ? '거리순' : '평점순'} 정렬 시작 ===`);
-
         // 모든 캠핑장 카드 가져오기
         const allCards = Array.from(campingList.children);
-
-        console.log('정렬 전:');
-        allCards.forEach((card, index) => {
-          const title = card.querySelector('h3').textContent;
-          const distance = card.dataset.distance;
-          const rating = card.dataset.rating;
-          console.log(`${index + 1}. ${title} - 거리: ${distance}km, 평점: ${rating}점`);
-        });
 
         // 정렬 실행
         allCards.sort((a, b) => {
@@ -1004,15 +1002,6 @@
             // 평점순: 높은 순 (내림차순)
             return parseFloat(b.dataset.rating) - parseFloat(a.dataset.rating);
           }
-        });
-
-        console.log('정렬 후:');
-        allCards.forEach((card, index) => {
-          const title = card.querySelector('h3').textContent;
-          const distance = card.dataset.distance;
-          const rating = card.dataset.rating;
-          const currentValue = sortType === 'distance' ? distance + 'km' : rating + '점';
-          console.log(`${index + 1}. ${title} - ${currentValue}`);
         });
 
         // 애니메이션과 함께 재배치
@@ -1032,20 +1021,17 @@
 
           // 애니메이션 복원
           campingList.style.opacity = '1';
-          console.log('✅ 정렬 완료!\n');
         }, 100);
       }
 
       // 거리순 버튼 클릭
       distanceBtn.addEventListener('click', function () {
-        console.log('🔄 거리순 버튼 클릭됨');
         setActiveButton(distanceBtn, ratingBtn);
         sortCampingList('distance');
       });
 
       // 평점순 버튼 클릭
       ratingBtn.addEventListener('click', function () {
-        console.log('🔄 평점순 버튼 클릭됨');
         setActiveButton(ratingBtn, distanceBtn);
         sortCampingList('rating');
       });
