--- a/weather.html
+++ b/weather.html
@@ -432,7 +432,7 @@
       </div>
     </div>
   </main>
-  <a href="https://readdy.ai/home/0086bfe3-a951-4d32-95bd-f87c4fe866e1/11376e19-f449-4769-be4a-e89f78077e2d"
+  <a href="#"
     data-readdy="true">
     <button id="fabBtn"
       class="fixed bottom-24 right-4 w-14 h-14 bg-primary text-white !rounded-full shadow-lg flex items-center justify-center cursor-pointer">
@@ -511,7 +511,6 @@
       });
       locationSearch.addEventListener('input', function () {
         if (this.value.length > 0) {
-          console.log('검색:', this.value);
         }
       });
     });
@@ -552,28 +551,26 @@
 
       // 토스트 팝업 생성
       const toast = document.createElement('div');
-      toast.className = 'toast-popup fixed top-20 left-1/2 transform -translate-x-1/2 bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
-      toast.textContent = message;
+      toast.className = 'toast-popup fixed top-20 left-0 right-0 mx-auto w-max bg-black/80 text-white px-4 py-3 rounded-lg z-50 animate-fadeIn';
 
-      // 스타일 추가
-      const style = document.createElement('style');
-      style.textContent = `
-        .toast-popup {
-          animation: fadeIn 0.3s ease-out forwards;
-        }
-        @keyframes fadeIn {
-          from { opacity: 0; transform: translate(-50%, -20px); }
-          to { opacity: 1; transform: translate(-50%, 0); }
-        }
+      toast.innerHTML = `
+        <div class="flex items-center gap-2 whitespace-nowrap">
+          <i class="ri-information-line text-lg"></i>
+          <span class="text-sm">${message}</span>
+        </div>
       `;
-      document.head.appendChild(style);
 
       document.body.appendChild(toast);
 
       // 3초 후 자동 제거
       setTimeout(() => {
         if (toast.parentElement) {
-          toast.remove();
+          toast.classList.add('opacity-0', 'transition-opacity', 'duration-300');
+          setTimeout(() => {
+            if (toast.parentElement) {
+              toast.remove();
+            }
+          }, 300);
         }
       }, 3000);
     }
