--- a/surroundings.html
+++ b/surroundings.html
@@ -678,6 +678,71 @@
     </div>
   </nav>
 
+  <!-- 사이드 메뉴바 -->
+  <div id="sideMenu"
+    class="fixed top-0 right-0 w-[280px] h-full bg-white transform translate-x-full transition-transform duration-300 z-50 shadow-lg flex flex-col">
+    <div class="flex items-center justify-between p-4 border-b">
+      <h2 class="text-lg font-medium">메뉴</h2>
+      <button id="closeMenu" class="w-8 h-8 flex items-center justify-center">
+        <i class="ri-close-line text-xl"></i>
+      </button>
+    </div>
+    <div class="flex-1 overflow-y-auto">
+      <div class="p-4 border-b">
+        <a href="./login.html" data-readdy="true" class="flex items-center gap-3 py-3 px-4 bg-gray-50 rounded-xl">
+          <i class="ri-user-add-line text-xl text-primary"></i>
+          <span>로그인/회원가입</span>
+        </a>
+      </div>
+      <div class="p-4 space-y-4">
+        <a href="./mypage.html" class="flex items-center gap-3">
+          <i class="ri-calendar-check-line text-xl text-gray-600"></i>
+          <span>예약 내역</span>
+        </a>
+        <a href="search.html" class="flex items-center gap-3">
+          <i class="ri-search-line text-xl text-gray-600"></i>
+          <span>캠핑장 검색</span>
+        </a>
+        <a href="shop_list.html?type=glamping" class="flex items-center gap-3">
+          <i class="ri-home-smile-line text-xl text-gray-600"></i>
+          <span>글램핑</span>
+        </a>
+        <a href="shop_list.html?type=caravan" class="flex items-center gap-3">
+          <i class="ri-caravan-line text-xl text-gray-600"></i>
+          <span>카라반</span>
+        </a>
+        <a href="shop_list.html?type=pension" class="flex items-center gap-3">
+          <i class="ri-hotel-line text-xl text-gray-600"></i>
+          <span>펜션</span>
+        </a>
+        <a href="shop_list.html?type=hotel" class="flex items-center gap-3">
+          <i class="ri-building-line text-xl text-gray-600"></i>
+          <span>호텔</span>
+        </a>
+        <a href="equipment.html" class="flex items-center gap-3">
+          <i class="ri-tent-line text-xl text-gray-600"></i>
+          <span>캠핑 장비 렌탈</span>
+        </a>
+        <a href="recomend_course_tmap.html" class="flex items-center gap-3">
+          <i class="ri-map-pin-line text-xl text-gray-600"></i>
+          <span>T맵 연동 관광 코스</span>
+        </a>
+        <a href="surroundings.html" class="flex items-center gap-3">
+          <i class="ri-restaurant-line text-xl text-gray-600"></i>
+          <span>주변 맛집</span>
+        </a>
+        <a href="event.html" class="flex items-center gap-3">
+          <i class="ri-gift-line text-xl text-gray-600"></i>
+          <span>이벤트</span>
+        </a>
+        <a href="customer_service.html" class="flex items-center gap-3">
+          <i class="ri-customer-service-line text-xl text-gray-600"></i>
+          <span>고객센터</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <div id="restaurantModal" class="fixed inset-0 bg-black/50 z-50 hidden">
     <div class="absolute bottom-0 left-0 right-0 bg-white rounded-t-xl max-h-[80vh] overflow-y-auto">
       <div class="sticky top-0 bg-white border-b px-4 py-3">
@@ -1071,7 +1136,7 @@
         restaurantList.innerHTML = '';
         filtered.forEach(r => restaurantList.appendChild(r));
 
-        // (4) “결과 없음” 토글
+        // (4) "결과 없음" 토글
         emptyState.classList.toggle('hidden', filtered.length > 0);
 
         // (5) 지도 마커 보이기/숨기기
@@ -1318,6 +1383,31 @@
     });
   </script>
 
+  <!-- 사이드 메뉴바 스크립트 -->
+  <script id="sideMenuScript">
+    document.addEventListener('DOMContentLoaded', function () {
+      const bottomMenuButton = document.getElementById('bottomMenuButton');
+      const closeMenu = document.getElementById('closeMenu');
+      const sideMenu = document.getElementById('sideMenu');
+
+      // 하단 네비게이션의 전체 버튼 클릭
+      bottomMenuButton.addEventListener('click', function () {
+        sideMenu.classList.remove('translate-x-full');
+      });
+
+      // 닫기 버튼 클릭
+      closeMenu.addEventListener('click', function () {
+        sideMenu.classList.add('translate-x-full');
+      });
+
+      // 외부 클릭 시 닫기
+      document.addEventListener('click', function (event) {
+        if (!sideMenu.contains(event.target) && !bottomMenuButton.contains(event.target)) {
+          sideMenu.classList.add('translate-x-full');
+        }
+      });
+    });
+  </script>
 
 </body>
 
